--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "livepeer-openrouter-shim",
-  "version": "1.0.1",
+  "version": "1.0.7",
   "description": "send LLM request to livepeer using openrouter syntax",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "test",
     "build": "tsc"
@@ -13,6 +13,7 @@
     "axios": "^1.7.7"
   },
   "devDependencies": {
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
 }
